# pysnowflakepipeline

./: .coverage  .env  .flake8  .gitignore  README.md  environment.yml  environment_deleteme.yml  fix_lint_issues.py  project_structure.txt  pyproject.toml  requirements.txt  setup.py  setup_snowflake_resources.sql  tree.py
.github/workflows/: ci.yml
.vscodedelete/: settings.json
dashboard/: dashboard.py  pipeline_run_history.json  pipeline_summary.json
snow_pipeline_pkg/: __main__.py  log_utils.py  pipeline_runner.py  pipeline_runner_xxx.py
snow_pipeline_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
snow_pipeline_pkg/config/: connection_details.json  copy_to_snowstg_avro_emp_details_avro_cls.json  schemas.py  snowflake_private_key.p8
snow_pipeline_pkg/ingest/: avro_loader.py
snow_pipeline_pkg/transform/: schema_mapper.py
snow_pipeline_pkg/utils/: config_loader.py  connection_loader.py  log_setup.py  snowflake_session.py
snow_pipeline_pkg/utils/validators/: __init__.py  environment_validator.py
snow_pipeline_pkg/validate/: quality_checks.py
snow_pipeline_pkg/writeback/: stage_writer.py
tests/validate/: test_column_overlap.py  test_schema_matching.py
